--- a/index.html
+++ b/index.html
@@ -1,8 +1,37 @@
 <!DOCTYPE html>
 <html>
-   <head>
-   </head>
-   <body>
-      <!-- Write your HTML in this file! -->
-   </body>
+  <head>
+    <title>From Teacher to Web Dev | Jillian Fusco</title>
+  </head>
+  <body>
+    <header>
+      <section>
+        <h1>From Teacher to Web Dev</h1>
+        <h3>My career journey</h3>
+        <h4>by Jillian Fusco</h4>
+      </section>
+    </header>
+
+    <main>
+      <section>
+        <!-- becoming a teacher/college -->
+      </section>
+
+      <section>
+        <!-- teaching -->
+      </section>
+
+      <section>
+        <!-- learning programming -->
+      </section>
+    </main>
+
+    <footer>
+      <p>
+         <small>&copy; Jillian Fusco 2024 <br />
+         <a href="www.linkedin.com/in/jillian-fusco-45535688" target="_blank">LinkedIn</a>
+         </small>
+      </p>
+    </footer>
+  </body>
 </html>
