added images and links to old projects

--- a/index.html
+++ b/index.html
@@ -149,12 +149,73 @@
           materials for my classes and mentoring students. I brainstormed ways
           to continue making things and teaching/mentoring and decided to become
           a web developer. I spent a few months doing self-paced courses like
-          Scrimba and Zero to Mastery, and while both were excellent, I realized
-          I needed something more structured and resource-rich.<br />
+          Scrimba and Zero to Mastery.
+        </p>
+
+        <h4>Here are some of my projects!</h4>
+
+        <p>
+          Kitty Cart was the culmination of the first JavaScript unit in
+          Scrimba. It connects to a database so multiple people can use it
+          simultaneously. I use it with my partner to keep our grocery list.
+          Read my blog post about
+          <a
+            href="https://dev.to/jillianfusco/celebrating-finishing-my-first-javascript-module-and-using-firebase-for-a-shopping-list-app-2cn0"
+            >Kitty Cart here!</a
+          ><br />
+          <img src="img/kittycartgif.webp" src="Kitty Cart gif" />
+
+          <br />Here are some smaller projects, click the image to see how they
+          work!<br />
+
+          <a href="https://jillysunitconverter.netlify.app/" target="_blank">
+            <img
+              src="img/unitconverter.png"
+              src="screenshot of unit converter site"
+          /></a>
+          <br />
+          <a href="https://jillysoldagram.netlify.app/" target="_blank">
+            <img src="img/oldagram.png" alt="screenshot of oldagram site" />
+          </a>
+          <br />
+          <a
+            href="https://thunderous-starlight-404f19.netlify.app/"
+            target="_blank"
+          >
+            <img
+              src="img/passwordgen.png"
+              alt="screenshot of password generator website"
+            />
+          </a>
+          <br />
+          <a
+            href="https://whimsical-semifreddo-7f13c8.netlify.app/"
+            target="_blank"
+          >
+            <img
+              src="img/emojifighter.png"
+              alt="screenshot of emoji fighter site"
+            />
+          </a>
+          <br />
+          <a href="https://soft-parfait-6252b3.netlify.app/" target="_blank">
+            <img src="img/scoreboard.png" alt="screenshot of scoreboard site" />
+          </a>
+          <br />
+          <a
+            href="https://monumental-sunburst-888f26.netlify.app/"
+            target="_blank"
+          >
+            <img src="img/counter.png" alt="screenshot of counter site" />
+          </a>
+          <br />
+          While both Srimba and ZTM were excellent introductions to web dev, I
+          realized I needed something more structured and resource-rich.<br />
 
           After posting one of my projects on LinkedIn, a friend messaged me
-          about an amazing free course from a nonprofit called LaunchCode, which
-          happened to be accepting applications for their web development
+          about an amazing free course from a nonprofit called
+          <a href="https://launchcode.org/" target="_blank"> LaunchCode</a>,
+          which happened to be accepting applications for their web development
           course. I was thrilled to be accepted and earn a spot, which I later
           learned had about a 20% acceptance rate. <br />
 
