--- a/index.html
+++ b/index.html
@@ -2,9 +2,44 @@
 <html>
   <head>
     <title>From Teacher to Web Dev | Jillian Fusco</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <nav>
+      <div class="left">
+        <a href="/">Jillian Fusco</a>
+      </div>
+      <div class="right">
+        <a href="https://github.com/jillianfusco" target="_blank"
+          ><i class="fa-brands fa-github"></i>
+          <span>Github</span>
+        </a>
+
+        <a href="https://www.linkedin.com/in/jillian-fusco-45535688/">
+          <i class="fa-brands fa-linkedin"></i>
+          <span>LinkedIn</span>
+        </a>
+
+        <a href="mailto:fuscojillian@gmail.com" target="_blank"
+          ><i class="fa-regular fa-envelope"></i>
+          <span>Email</span>
+        </a>
+      </div>
+    </nav>
     <header>
       <section>
         <h1>From Teacher to Web Dev</h1>
@@ -14,7 +49,7 @@
     </header>
 
     <main>
-      <section>
+      <section id="education-journey">
         <h2>My Education Journery</h2>
         <p>
           I earned a Bachelor of Arts degree in Languages and Cultures from West
@@ -43,7 +78,7 @@
         />
       </section>
 
-      <section>
+      <section id="traveling-to-germany">
         <h2>Traveling to Germany with Students</h2>
         <p>
           In 2022, I had the incredible opportunity to travel to Germany with my
@@ -75,7 +110,7 @@
         />
       </section>
 
-      <section>
+      <section id="getting-classroom">
         <h2>Getting my own classroom</h2>
 
         <p>
@@ -100,7 +135,7 @@
         />
       </section>
 
-      <section>
+      <section id="leaving-teaching">
         <h2>Leaving Teaching</h2>
 
         <p>
@@ -142,7 +177,7 @@
         </article>
       </section>
 
-      <section>
+      <section id="learing-programming">
         <h2>Learning Programming</h2>
         <p>
           Reflecting on my teaching career, my favorite aspects were creating
