--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <header>
       <section class="hero-section">
-        <h2>From Teacher to Web Dev</h2>
+        <h2>Teacher to Web Dev</h2>
         <div class="links">
           <a href="#education-journey">My Education Journey</a><br />
           <a href="#traveling-to-germany">Traveling to Germany with Students</a><br />
@@ -193,7 +193,7 @@
             simultaneously. I use it with my partner to keep our grocery list.
             Read my blog post about
           
-          <a href="https://dev.to/jillianfusco/celebrating-finishing-my-first-javascript-module-and-using-firebase-for-a-shopping-list-app-2cn0">Kitty Cart here!</a></p>
+          <a href="https://dev.to/jillianfusco/celebrating-finishing-my-first-javascript-module-and-using-firebase-for-a-shopping-list-app-2cn0" target="_blank">Kitty Cart here!</a></p>
           
           <div class="kittycart">
             <img  src="img/kittycartgif.webp" alt="Kitty Cart gif" />
