--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <header>
       <section class="hero-section">
-        <h2>Teacher to Web Dev</h2>
+        <h2>From Teacher to Web Dev</h2>
         <div class="links">
           <a href="#education-journey">My Education Journey</a><br />
           <a href="#traveling-to-germany">Traveling to Germany with Students</a><br />
